fix: ⚡️ gaps on mobile

--- a/src/components/footer/index.module.scss
+++ b/src/components/footer/index.module.scss
@@ -25,7 +25,6 @@
 
   display: grid;
   grid-auto-flow: column;
-  grid-template-rows: 1fr 1fr;
 
   grid-template-areas:
     'Copyright Copyright'
