--- a/src/components/header/index.module.scss
+++ b/src/components/header/index.module.scss
@@ -85,7 +85,7 @@
 }
 
 .separator {
-  height: 50%;
+  height: 50% !important;
 }
 
 .address {
