--- a/src/components/icons/index.module.scss
+++ b/src/components/icons/index.module.scss
@@ -1,7 +1,7 @@
 @import '@styles/variables.scss';
 
 .menu {
-  margin-left: 6px;
+  // margin-left: 6px;
   // border: 1px dashed black;
 
   svg {
